--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -1,6 +1,6 @@
-{% comment %}ly_global_begin{% endcomment %}{% include 'ly-global' %}{% comment %}ly_global_end{% endcomment %}{% comment %}ly_static_code_begin{% endcomment %}{% capture ly_content %}{% comment %}ly_static_code_end{% endcomment %}<!doctype html>
-<!--[if IE 9]> <html class="ie9 no-js" lang="{{ shop.locale }}"{% comment %}ly_dir_replace_for_[]_begin{% endcomment %}{% assign language = cart.attributes["language"] %}{% if language == nil %}{% assign language = shop.metafields["languages"]["default"] %}{% endif %}{% if shop.metafields.languages_dir[language] == 'rtl' %} dir="rtl" {% endif %}{% comment %}ly_dir_replace_end{% endcomment %}> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="{{ shop.locale }}"{% comment %}ly_dir_replace_for_[]_begin{% endcomment %}{% assign language = cart.attributes["language"] %}{% if language == nil %}{% assign language = shop.metafields["languages"]["default"] %}{% endif %}{% if shop.metafields.languages_dir[language] == 'rtl' %} dir="rtl" {% endif %}{% comment %}ly_dir_replace_end{% endcomment %}> <!--<![endif]-->
+<!doctype html>
+<!--[if IE 9]> <html class="ie9 no-js" lang="{{ shop.locale }}"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="{{ shop.locale }}"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,28 +13,28 @@
   {% endif %}
 
   <title>
-    {{ langify_shop_name }} – {% comment %}ly_i18n_replace_for_[ 'general.password_page.opening_soon' | t ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.password_page.opening_soon' | t }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902397' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template | escape}}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %}
+    {{ shop.name }} – {{ 'general.password_page.opening_soon' | t }}
   </title>
 
-  {% if langify_description %}
-    <meta name="description" content="{{ langify_description | escape }}">
+  {% if page_description %}
+    <meta name="description" content="{{ page_description | escape }}">
   {% endif %}
 
   {% include 'social-meta-tags' %}
 
-  {% comment %}ly_asset_replace_for_[ 'theme.scss.css' | asset_url | stylesheet_tag ]_begin{% endcomment %}{% assign ly_asset = 'theme.scss.css' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  | stylesheet_tag }}{% comment %}ly_asset_replace_end{% endcomment %}
+  {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
 
-  <!--[if (lte IE 9) ]>{% comment %}ly_asset_replace_for_[ 'match-media.min.js' | asset_url | script_tag ]_begin{% endcomment %}{% assign ly_asset = 'match-media.min.js' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  | script_tag }}{% comment %}ly_asset_replace_end{% endcomment %}<![endif]-->
+  <!--[if (lte IE 9) ]>{{ 'match-media.min.js' | asset_url | script_tag }}<![endif]-->
 
 
-  <!--[if (gt IE 9)|!(IE)]><!--><script src="{% comment %}ly_asset_replace_for_[ 'theme.js' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'theme.js' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" defer="defer"></script><!--<![endif]-->
-  <!--[if lte IE 9]><script src="{% comment %}ly_asset_replace_for_[ 'theme.js' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'theme.js' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}"></script><![endif]-->
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'theme.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
+  <!--[if lte IE 9]><script src="{{ 'theme.js' | asset_url }}"></script><![endif]-->
 
-  <!--[if (gt IE 9)|!(IE)]><!--><script src="{% comment %}ly_asset_replace_for_[ 'password.js' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'password.js' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" defer="defer"></script><!--<![endif]-->
-  <!--[if lte IE 9]><script src="{% comment %}ly_asset_replace_for_[ 'password.js' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'password.js' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}"></script><![endif]-->
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'password.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
+  <!--[if lte IE 9]><script src="{{ 'password.js' | asset_url }}"></script><![endif]-->
 
   {{ content_for_header }}
-{% comment %}ly_dir_styles_begin{% endcomment %}{% assign language = cart.attributes["language"] %}{% if language == nil %}{% assign language = shop.metafields["languages"]["default"] %}{% endif %}{% if shop.metafields.languages_dir[language] == 'rtl' %}{% comment %}ly_asset_replace_for_[ 'ly-rtl.css' | asset_url | stylesheet_tag ]_begin{% endcomment %}{% assign ly_asset = 'ly-rtl.css' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  | stylesheet_tag }}{% comment %}ly_asset_replace_end{% endcomment %}{% endif %}{% comment %}ly_dir_styles_end{% endcomment %}</head>
+</head>
 
 <body class="template-password">
   <div class="password-page text-center">
@@ -42,7 +42,7 @@
       <div class="password-header__inner">
         <div class="password-login">
           <a href="#LoginModal" class="js-modal-open-login-modal link--action btn btn--secondary">
-            {% comment %}ly_i18n_replace_for_[ 'general.password_page.password_link' | t ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.password_page.password_link' | t }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902398' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template | escape}}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %} →
+            {{ 'general.password_page.password_link' | t }} →
           </a>
         </div>
       </div>
@@ -58,26 +58,26 @@
   <div id="LoginModal" class="modal">
     <div class="modal__inner">
       <div class="modal__centered password-modal__content page-width text-center">
-        <p class="password__form-heading h4">{% comment %}ly_i18n_replace_for_[ 'general.password_page.login_form_heading' | t ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.password_page.login_form_heading' | t }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902399' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template | escape}}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %}</p>
+        <p class="password__form-heading h4">{{ 'general.password_page.login_form_heading' | t }}</p>
           {% form 'storefront_password' %}
             {{ form.errors | default_errors }}
-            <label for="password" class="label--hidden">{% comment %}ly_i18n_replace_for_[ 'general.password_page.login_form_password_label' | t ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.password_page.login_form_password_label' | t }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902400' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template | escape}}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %}</label>
+            <label for="password" class="label--hidden">{{ 'general.password_page.login_form_password_label' | t }}</label>
             <div class="input-group password__input-group">
-              <input type="password" name="password" id="Password" class="input-group__field input--content-color" placeholder="{% comment %}ly_i18n_replace_for_[ 'general.password_page.login_form_password_placeholder' | t ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.password_page.login_form_password_placeholder' | t }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902401' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template | escape}}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %}">
+              <input type="password" name="password" id="Password" class="input-group__field input--content-color" placeholder="{{ 'general.password_page.login_form_password_placeholder' | t }}">
               <span class="input-group__btn">
                 <button type="submit" name="commit" class="btn btn--narrow">
-                  {% comment %}ly_i18n_replace_for_[ 'general.password_page.login_form_submit' | t ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.password_page.login_form_submit' | t }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902402' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template | escape}}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %}
+                  {{ 'general.password_page.login_form_submit' | t }}
                 </button>
               </span>
             </div>
           {% endform %}
-        <p>{% comment %}ly_i18n_replace_for_[ 'general.password_page.admin_link_html' | t ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.password_page.admin_link_html' | t }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902403' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template}}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %}</p>
+        <p>{{ 'general.password_page.admin_link_html' | t }}</p>
       </div>
     </div>
 
     <button type="button" class="modal__close js-modal-close text-link">
       {% include 'icon-close' %}
-      <span class="icon__fallback-text">{% comment %}ly_i18n_replace_for_[ 'general.accessibility.close_modal' | t | json ]_begin{% endcomment %}{% capture ly_template %}{{ 'general.accessibility.close_modal' | t | json }}{% endcapture %}{% capture ly_translation %}{% render 'ly-static-string' with '16902404' render:true %}{% endcapture %}{% if ly_translation != '' and ly_translation != nil  %}{% assign escape_content = true %}{% assign ly_template = ly_translation %}{% else %}{% assign escape_content = false %}{% endif %}{% if escape_content %}{{ ly_template | escape | json }}{% else %}{{ ly_template }}{% endif %}{% comment %}ly_i18n_replace_end{% endcomment %}</span>
+      <span class="icon__fallback-text">{{ 'general.accessibility.close_modal' | t | json }}</span>
     </button>
   </div>
 
@@ -92,6 +92,5 @@
     }
   </script>
 
-{% comment %}ly_static_code_begin{% endcomment %}{% include 'ly-languages' %}{% comment %}ly_static_code_end{% endcomment %}</body>
+</body>
 </html>
-{% comment %}ly_static_code_begin{% endcomment %}{% endcapture %}{% include 'ly-static' with ly_content %}{% comment %}ly_static_code_end{% endcomment %}
