Transparency changes for product laybels

--- a/assets/custom.scss.liquid
+++ b/assets/custom.scss.liquid
@@ -827,8 +827,9 @@ input.btn.add_toCart {
     -webkit-flex: 0 1 auto;
     -ms-flex: 0 1 auto;
   }
-  .product__label--New {background-color: rgba(0, 135, 107, 0.2);}
-  .product__label--Bestseller {background-color: rgba(140, 46, 0, 0.2);}
+  .product__label--New {background-color: #cce7e1;}
+  .product__label--Bestseller {background-color: #e8d5cc;}
   .product__label--Perfect-gift {background-color: rgba(103, 36, 222, 0.2);}
   .product__label--for-him {background-color: rgba(0, 120, 223, 0.2);}
   .product__label--for-her {background-color: rgba(255, 0, 26, 0.2);}
+  .product__label--for-any-size {background-color: #d6d6d4}
