Transparency changes for product laybels

--- a/assets/custom.scss.liquid
+++ b/assets/custom.scss.liquid
@@ -833,3 +833,4 @@ input.btn.add_toCart {
   .product__label--for-him {background-color: rgba(0, 120, 223, 0.2);}
   .product__label--for-her {background-color: rgba(255, 0, 26, 0.2);}
   .product__label--for-any-size {background-color: #d6d6d4}
+  .product__label--sale {background-color: rgba(0, 0, 0, 1); color: white}
