Speed up website loading: Lazy loading for images on the product page

--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -49,6 +49,7 @@
         <div id="{{ img_wrapper_id }}" class="product-single__photo-wrapper small--hide js">
           <div id="{{ zoom_img_id }}" style="padding-top:{{ 1 | divided_by: image.aspect_ratio | times: 100}}%;position: relative;overflow: hidden;" class="product-single__photo-{{ section.id }}{% if enable_zoom %} js-zoom-enabled{% endif %}{% if product.images.size > 1 %} product-single__photo--has-thumbnails{% endif %}{% unless featured_image == image %} hide{% endunless %}" data-image-id="{{ image.id }}"{% if enable_zoom %} data-zoom="{{ image | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
             <img id="{{ img_id }}"
+                 loading="lazy" 
                  class="feature-row__image {{ img_class }} lazyload{% unless featured_image == image %} lazypreload{% endunless %}"
                  src="{{ image | img_url: '300x300' }}"
                  data-src="{{ img_url }}"
@@ -62,7 +63,7 @@
 
       <noscript>
         {% capture product_image_size %}530x{% endcapture %}
-        <img src="{{ featured_image | img_url: product_image_size, scale: product_image_scale }}" alt="{{ featured_image.alt }}" id="FeaturedImage-{{ section.id }}" class="product-featured-img" style="max-width: 530px;">
+        <img loading="lazy" src="{{ featured_image | img_url: product_image_size, scale: product_image_scale }}" alt="{{ featured_image.alt }}" id="FeaturedImage-{{ section.id }}" class="product-featured-img" style="max-width: 530px;">
       </noscript>
       {% else %}
       <div id="FeaturedImageZoom-{{ section.id }}" class="product-single__photo">
@@ -88,7 +89,7 @@
                    class="text-link product-single__thumbnail product-single__thumbnail--{{ section.id }}"
                    data-thumbnail-id="{{ image.id }}"
                    {% if enable_zoom %}data-zoom="{{ image.src | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
-                     <img class="product-single__thumbnail-image" src="{{ image.src | img_url: '480x480', scale: 2 }}" alt="{{ image.alt | escape }}">
+                     <img loading="lazy" class="product-single__thumbnail-image" src="{{ image.src | img_url: '480x480', scale: 2 }}" alt="{{ image.alt | escape }}">
                 </a>
               </li>
             {% endfor %}
@@ -373,9 +374,9 @@
           {% endif %}
           <span class="payment-img">
           	{% unless section.settings.enable_trust_badges_image == blank %}
-            <img src="{{ section.settings.enable_trust_badges_image | img_url: '550x' }}">
+            <img loading="lazy" src="{{ section.settings.enable_trust_badges_image | img_url: '550x' }}">
             {% else %}
-            <img src="{{ 'pay_right.png' | asset_img_url: '500x100' }}">               
+            <img loading="lazy" src="{{ 'pay_right.png' | asset_img_url: '500x100' }}">               
             {% endunless %}  
           </span>
         </div>
