--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -65,7 +65,8 @@ kv 02/02/21
 
                 <div id="{{ img_wrapper_id }}" class="product-single__photo-wrapper small--hide js">
                     <div id="{{ zoom_img_id }}" style="padding-top:{{ 1 | divided_by: media.aspect_ratio | times: 100}}%;position: relative;overflow: hidden;" class="product-single__photo-{{ section.id }}{% if enable_zoom %} js-zoom-enabled{% endif %}{% if product.images.size > 1 %} product-single__photo--has-thumbnails{% endif %}{% unless featured_image == media %} hide{% endunless %}" data-image-id="{{ media.id }}"{% if enable_zoom %} data-zoom="{{ media | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
-                    <img id="{{ img_id }}"
+                    <img id="{{ img_id }}" 
+                        loading="lazy" 
                         class="feature-row__image {{ img_class }} lazyload{% unless featured_image == media %} lazypreload{% endunless %}"
                         src="{{ media | img_url: '300x300' }}"
                         data-src="{{ img_url }}"
@@ -125,7 +126,7 @@ kv 02/02/21
         </style>
       <noscript>
         {% capture product_image_size %}530x{% endcapture %}
-        <img src="{{ featured_image | img_url: product_image_size, scale: product_image_scale }}" alt="{{ featured_image.alt }}" id="FeaturedImage-{{ section.id }}" class="product-featured-img" style="max-width: 530px;">
+        <img src="{{ featured_image | img_url: product_image_size, scale: product_image_scale }}" loading="lazy" alt="{{ featured_image.alt }}" id="FeaturedImage-{{ section.id }}" class="product-featured-img" style="max-width: 530px;">
       </noscript>
 
 
@@ -143,8 +144,8 @@ kv 02/02/21
                                     class="text-link product-single__thumbnail product-single__thumbnail--{{ section.id }}"
                                     data-thumbnail-id="{{ media.id }}"
                                     {% if enable_zoom %}data-zoom="{{ media.src | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
-                                    <img class="product-single__thumbnail-image medium-up--hide" src="{{ media.src | img_url: '480x480', scale: 2 }}" alt="{{ media.alt | escape }}">
-                                    <img class="product-single__thumbnail-image small--hide" src="{{ media.src | img_url: 'compact' }}" alt="{{ media.alt | escape }}">
+                                    <img class="product-single__thumbnail-image medium-up--hide" loading="lazy" src="{{ media.src | img_url: '480x480', scale: 2 }}" alt="{{ media.alt | escape }}">
+                                    <img class="product-single__thumbnail-image small--hide" loading="lazy" src="{{ media.src | img_url: 'compact' }}" alt="{{ media.alt | escape }}">
                                     </a>
                                 </li>       
                         {% when 'external_video' %}
@@ -155,7 +156,7 @@ kv 02/02/21
                                     data-thumbnail-id="{{ media.id }}"
                                     {% if enable_zoom %}data-zoom="{{ media.src | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
                             <div class="product-single__thumbnail-image medium-up--hide video-media" style="height:340px;display: flex;align-items: center;justify-content: center;">{{ media | external_video_tag }}</div>
-                            <img class="product-single__thumbnail-image small--hide" src="{{ media.preview_image | img_url: 'compact' }}" alt="{{ media.alt | escape }}">                            
+                            <img loading="lazy" class="product-single__thumbnail-image small--hide" src="{{ media.preview_image | img_url: 'compact' }}" alt="{{ media.alt | escape }}">                            
                             </a>
                             </li>                       
                         {% endcase %}            
