--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -59,15 +59,15 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
       {% if is_color and section.settings.swatch_option == 'with_background' %}
       <div class="tooltip">{{ value }}</div>
       {% endif %}
-      <input id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" type="radio" name="option-{{ option_index }}" value="{{ value | escape }}"{% if forloop.first %}{% unless section.settings.enable_default_variant %} checked{% endunless %}{% endif %} {% unless variant.available %}disabled{% endunless %} />
+      {% if product.type == 'Puzzle' and swatch == 'Size' %}
+      {% assign size_count = size_count | plus: 1 %}
+      <input id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" type="radio" ga-data="{{size_count}}" name="option-{{ option_index }}" value="{{ value | escape }}"{% if forloop.first %}{% unless section.settings.enable_default_variant %} checked{% endunless %}{% endif %} {% unless variant.available %}disabled{% endunless %} />
       {% if is_color and section.settings.swatch_option == 'with_background' %}
       <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" style="background-color: {{ value | split: ' ' | last | handle }}; background-image: url({% comment %}ly_asset_replace_for_[ value | handle | append: '.' | append: file_extension | asset_url ]_begin{% endcomment %}{% assign ly_asset = value | handle | append: '.' | append: file_extension %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %})">
         <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
       </label>
       {% else %}
 
-      {% if product.type == 'Puzzle' and swatch == 'Size' %}
-      {% assign size_count = size_count | plus: 1 %}
       {%- if size_count == 2 -%}
         <div class="product__labels most-popular-label">
             <span class="product__label product__label--most-popular">most popular</span>
