--- a/snippets/social-meta-tags.liquid
+++ b/snippets/social-meta-tags.liquid
@@ -1,4 +1,6 @@
-{% comment %}ly_global_begin{% endcomment %}{% include 'ly-global' %}{% comment %}ly_global_end{% endcomment %}<!-- /snippets/social-meta-tags.liquid -->
+{% comment %}ly_global_begin{% endcomment %}{% include 'ly-global' %}{% comment %}ly_global_end{% endcomment %}
+<!-- /snippets/social-meta-tags.liquid -->
+
 {%- assign og_title = langify_title -%}
 {%- assign og_url = canonical_url -%}
 {%- assign og_type = 'website' -%}
@@ -8,38 +10,41 @@
   {%- capture og_image_secure_url_tags -%}<meta property="og:image:secure_url" content="https:{{ settings.share_image | img_url: '1200x1200' }}">{%- endcapture -%}
 {% endif %}
 
+{% case template %}
 {% comment %} Template specific overides {% endcomment %}
-{% if template.name == 'product' %}
-  {%- assign og_title = product.title | strip_html -%}
-  {%- assign og_type = 'product' -%}
-  {% if product.images.size > 0 %}
-    {%- capture og_image_tags -%}{% for image in product.images limit:3 -%}<meta property="og:image" content="http:{{ image.src | product_img_url: '1200x1200' }}">{% endfor -%}{% endcapture -%}
-    {%- capture og_image_secure_url_tags -%}{% for image in product.images limit:3 -%}<meta property="og:image:secure_url" content="https:{{ image.src | product_img_url: '1200x1200' }}">{% endfor -%}{% endcapture -%}
-  {% endif %}
+  {% when 'product' %}
+    {%- assign og_title = product.title | strip_html -%}
+    {%- assign og_type = 'product' -%}
+    {% if product.images.size > 0 %}
+      {%- capture og_image_tags -%}{% for image in product.images limit:3 -%}<meta property="og:image" content="http:{{ image.src | product_img_url: '1200x1200' }}">{% endfor -%}{% endcapture -%}
+      {%- capture og_image_secure_url_tags -%}{% for image in product.images limit:3 -%}<meta property="og:image:secure_url" content="https:{{ image.src | product_img_url: '1200x1200' }}">{% endfor -%}{% endcapture -%}
+    {%- endif -%}
 
-{% elsif template.name == 'article' %}
-  {%- assign og_title = article.title | strip_html -%}
-  {%- assign og_type = 'article' -%}
-  {%- assign og_description = article.excerpt_or_content | strip_html -%}
-  {% if article.image %}
-    {%- capture og_image_tags -%}<meta property="og:image" content="http:{{ article.image | img_url: '1200x1200' }}">{%- endcapture -%}
-    {%- capture og_image_secure_url_tags -%}<meta property="og:image:secure_url" content="https:{{ article.image | img_url: '1200x1200' }}">{%- endcapture -%}
-  {% endif %}
+  {% when 'article' %}
+    {%- assign og_title = article.title | strip_html -%}
+    {%- assign og_type = 'article' -%}
+    {%- assign og_description = article.excerpt_or_content | strip_html -%}
+    {% if article.image %}
+      {%- capture og_image_tags -%}<meta property="og:image" content="http:{{ article.image | img_url: '1200x1200' }}">{%- endcapture -%}
+      {%- capture og_image_secure_url_tags -%}<meta property="og:image:secure_url" content="https:{{ article.image | img_url: '1200x1200' }}">{%- endcapture -%}
+      {%- endif -%}
 
-{% elsif template.name == 'collection' %}
-  {%- assign og_title = collection.title | strip_html -%}
-  {%- assign og_type = 'product.group' -%}
-  {% if collection.image %}
-    {%- capture og_image_tags -%}<meta property="og:image" content="http:{{ collection.image | img_url: '1200x1200' }}">{%- endcapture -%}
-    {%- capture og_image_secure_url_tags -%}<meta property="og:image:secure_url" content="https:{{ collection.image | img_url: '1200x1200' }}">{%- endcapture -%}
-  {% endif %}
+  {% when 'collection' %}
+    {%- assign og_title = collection.title | strip_html -%}
+    {%- assign og_type = 'product.group' -%}
+    {% if collection.image %}
+      {%- capture og_image_tags -%}<meta property="og:image" content="http:{{ collection.image | img_url: '1200x1200' }}">{%- endcapture -%}
+      {%- capture og_image_secure_url_tags -%}<meta property="og:image:secure_url" content="https:{{ collection.image | img_url: '1200x1200' }}">{%- endcapture -%}
+      {%- endif -%}
 
-{% elsif template.name == 'password' %}
-  {%- assign og_title = langify_shop_name -%}
-  {%- assign og_url = shop.url -%}
-  {%- assign og_description = langify_shop_description | default: langify_shop_name -%}
-{% endif %}
-<!-- 
+  {% when 'password' %}
+    {%- assign og_title = langify_shop_name -%}
+    {%- assign og_url = shop.url -%}
+    {%- assign og_description = langify_shop_description | default: langify_shop_name -%}
+  {% else %}
+
+{% endcase %}
+
 <meta property="og:site_name" content="{{ langify_shop_name }}">
 <meta property="og:url" content="{{ og_url }}">
 <meta property="og:title" content="{{ og_title }}">
@@ -51,10 +56,9 @@
 {% endif %}
 {{ og_image_tags }}
 {{ og_image_secure_url_tags }}
-
 {% unless settings.social_twitter_link == blank %}
   <meta name="twitter:site" content="{{ settings.social_twitter_link | split: 'twitter.com/' | last | prepend: '@' }}">
 {% endunless %}
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{{ og_title }}">
-<meta name="twitter:description" content="{{ og_description }}"> -->
+<meta name="twitter:description" content="{{ og_description }}">
