--- a/snippets/social-meta-tags.liquid
+++ b/snippets/social-meta-tags.liquid
@@ -1,6 +1,5 @@
 {% comment %}ly_global_begin{% endcomment %}{% include 'ly-global' %}{% comment %}ly_global_end{% endcomment %}
 <!-- /snippets/social-meta-tags.liquid -->
-
 {%- assign og_title = langify_title -%}
 {%- assign og_url = canonical_url -%}
 {%- assign og_type = 'website' -%}
@@ -45,20 +44,20 @@
 
 {% endcase %}
 
-<meta property="og:site_name" content="{{ langify_shop_name }}">
-<meta property="og:url" content="{{ og_url }}">
-<meta property="og:title" content="{{ og_title }}">
-<meta property="og:type" content="{{ og_type }}">
-<meta property="og:description" content="{{ og_description }}">
+<meta property="og:site_name" content="{{ langify_shop_name }}" />
+<meta property="og:url" content="{{ og_url }}" />
+<meta property="og:title" content="{{ og_title }}" />
+<meta property="og:type" content="{{ og_type }}" />
+<meta property="og:description" content="{{ og_description }}" />
 {% if template.name == 'product' %}
-  <meta property="og:price:amount" content="{{ product.price | money_without_currency | strip_html }}">
-  <meta property="og:price:currency" content="{{ shop.currency }}">
+  <meta property="og:price:amount" content="{{ product.price | money_without_currency | strip_html }}" />
+  <meta property="og:price:currency" content="{{ shop.currency }}" />
 {% endif %}
 {{ og_image_tags }}
 {{ og_image_secure_url_tags }}
 {% unless settings.social_twitter_link == blank %}
-  <meta name="twitter:site" content="{{ settings.social_twitter_link | split: 'twitter.com/' | last | prepend: '@' }}">
+  <meta name="twitter:site" content="{{ settings.social_twitter_link | split: 'twitter.com/' | last | prepend: '@' }}" />
 {% endunless %}
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="{{ og_title }}">
-<meta name="twitter:description" content="{{ og_description }}">
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="{{ og_title }}" />
+<meta name="twitter:description" content="{{ og_description }}" />
